--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,11 @@
         <item>Kanpur</item>
     </string-array>
 
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="usr_name">usrname</string>
+    <string name="usr_id">usrid</string>
+    <string name="usr_loc">usrloc</string>
+    <string name="usr_cont">usrcont</string>
+    <string name="password">password</string>
 </resources>
