--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,10 @@
         <item>Varanasi</item>
         <item>Kanpur</item>
     </string-array>
+    <string-array name="assType">
+        <item>Car</item>
+        <item>Bike</item>
+    </string-array>
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
